--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>The Batman</title>
+    <link rel="icon" type="img" href="img/icon.png"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
